cibuild: add license check for all Go source files

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ before_install:
 before_script:
   - go get -d ./...
 script:
+  - ./cibuild.sh
+  - go build ./...
   - golint ./...
   - go vet ./...
   - go test -v ./...
