scripts: make directory, move license check, add golint check

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ before_install:
 before_script:
   - go get -d ./...
 script:
-  - ./cibuild.sh
+  - ./scripts/licensecheck.sh
   - go build ./...
-  - golint ./...
+  - ./scripts/golint.sh
   - go vet ./...
   - go test -v ./...
