Replace scripts/golint.sh with  built-in golint flag

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ before_script:
 script:
   - ./scripts/licensecheck.sh
   - go build ./...
-  - ./scripts/golint.sh
+  - golint -set_exit_status ./...
   - go vet ./...
   - go test -v ./...
