--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_script:
   - go get -d ./...
 script:
   - ./scripts/licensecheck.sh
+  - ./scripts/codegeneration.sh
   - go build ./...
   - golint -set_exit_status ./...
   - go vet ./...
