--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ go:
   - 1.7
 before_install:
   - go get github.com/golang/lint/golint
+  - go get golang.org/x/tools/cmd/stringer
 before_script:
   - go get -d ./...
 script:
