scripts: add golint script again that ignores generated code

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ script:
   - ./scripts/licensecheck.sh
   - ./scripts/codegeneration.sh
   - go build ./...
-  - golint -set_exit_status ./...
+  - ./scripts/golint.sh
   - go vet ./...
   - go test -v ./...
