--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,12 @@ go:
   - 1.x
 
 env:
+  - QEMU=2.2.0 QEMU_EXT=xz LIBVIRT=1.2.2 LIBVIRT_EXT=gz
+  - QEMU=2.2.0 QEMU_EXT=xz LIBVIRT=2.3.0 LIBVIRT_EXT=xz
+  - QEMU=2.2.0 QEMU_EXT=xz LIBVIRT=3.1.0 LIBVIRT_EXT=xz
+  - QEMU=2.5.0 QEMU_EXT=xz LIBVIRT=1.2.2 LIBVIRT_EXT=gz
+  - QEMU=2.5.0 QEMU_EXT=xz LIBVIRT=2.3.0 LIBVIRT_EXT=xz
+  - QEMU=2.5.0 QEMU_EXT=xz LIBVIRT=3.1.0 LIBVIRT_EXT=xz
   - QEMU=2.9.0 QEMU_EXT=xz LIBVIRT=1.2.2 LIBVIRT_EXT=gz
   - QEMU=2.9.0 QEMU_EXT=xz LIBVIRT=2.3.0 LIBVIRT_EXT=xz
   - QEMU=2.9.0 QEMU_EXT=xz LIBVIRT=3.1.0 LIBVIRT_EXT=xz
