--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ install:
   - rm qemu-${QEMU}.tar.${QEMU_EXT} libvirt-${LIBVIRT}.tar.${LIBVIRT_EXT}
   
 before_install:
-  - go get github.com/golang/lint/golint
+  - go get golang.org/x/lint/golint
   - go get golang.org/x/tools/cmd/stringer
 
 before_script:
