--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,7 @@ install:
 before_install:
   - go get golang.org/x/lint/golint
   - go get golang.org/x/tools/cmd/stringer
+  - go mod tidy
 
 before_script:
   - go get -d ./...
